-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0
-
None
-
QT: v6.8.2 + EMSDK 3.1.56 vs. Qt: v.6.9.0 + EMSDK 3.1.70
-
-
b01fe1390 (dev), 595647cb6 (6.9)
While comparing the latest v6.9.0 release on WebAssembly platform, I have noticed that the context menu does not appear anymore.
Reproducing the issue:
(
Compile scripts: https://hyperborg.com/cp/bugreport.tar.gz
main.cpp only: https://hyperborg.com/cp/main.cpp)
-
-
- v6.8.2 --*
Go to: https://hyperborg.com/cp/v6.8.2/copypaste.html
press right click and the context menu appears
- v6.8.2 --*
-

-
-
- v6.9.0--*
When using the same source code, but Qt v6.9.0 for WASM, the context menu does not show.
Go to: https://hyperborg.com/cp/v6.9.0/copypaste.html
Right click on the QTextEdit area, but nothing happens.
- v6.9.0--*
-

- relates to
-
QTBUG-132066 contextMenuEvent no longer works
-
- Closed
-
- resulted from
-
QTBUG-90990 Drop down widget get left behind if dialog window is moved
-
- Closed
-
| For Gerrit Dashboard: QTBUG-136241 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 642643,4 | maybeSynthesizeContextMenuEvent: accept mouse event if CME accepted | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 642895,2 | maybeSynthesizeContextMenuEvent: accept mouse event if CME accepted | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 643091,2 | maybeSynthesizeContextMenuEvent: accept mouse event if CME accepted | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: ABANDONED | +2 | 0 |